tests/invalid_semantic/while_condition_int.mc
int main() {
    int x;
    x = 1;
    while (x) {
        x = x - 1;
    }
    return 0;
}
